fix: buttons alignment in safari

--- a/src/app/tasks/modals/grade-task-modal/grade-task-modal.component.scss
+++ b/src/app/tasks/modals/grade-task-modal/grade-task-modal.component.scss
@@ -44,6 +44,9 @@ $primary-blue: #3939ff;
 .buttons {
   display: flex;
   justify-content: end;
+  -webkit-justify-content: flex-end;
+  align-items: flex-end;
+  -webkit-align-items: flex-end;
 }
 
 .task-label {
